fix: brief horizontal overflow on resize

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -32,6 +32,9 @@ body
 
 	color-scheme: light dark;
 
+	max-width: 100vw;
+	overflow-x: hidden;
+
 	> main
 	{
 		@include maxCenter;
